fixed stretched circles maybe?

--- a/css/home.css
+++ b/css/home.css
@@ -173,6 +173,7 @@
 	margin-bottom: 0px;
 	padding-bottom: 10px;
 	margin-right: 50px;
+	flex:1;
 }
 
 .feature-title {
